<resources>
    <string name="app_name">Easy Lock</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="device_admin_description">Required to turn screen off and put the device to sleep</string>
    <string name="device_admin_name">Easy Lock</string>
    <string name="start_on_boot">Start the service when device boots up</string>
    <string name="avoid_softkey">Try to avoid softkey presses</string>
    <string name="title_activity_settings">Settings</string>
    <string name="service_enabled">Service is running. Click to pause.</string>
    <string name="service_disabled">Service paused. Click to resume.</string>
    <string name="enable_admin">Please enable administrator privileges for Easy Lock.</string>
    <string name="show_notification">Show app notification</string>
    <string name="warning_avoid_softkeys">If you set this option, Easy Lock will try to detect when you\'re pressing navigation bar soft keys and avoid locking the screen in such scenarios.\n\nHowever, it\'s not guaranteed to work always.\n\nThis might impact the general performance of the device.\n\nDo you want to enable this option?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning_notification">If you disable EasyLock notification, Android system may end EasyLock in the background.\n\nIt is highly recommended that you keep notification enabled.\n\nAre you sure you want to disable the notification?</string>
    <string name="warning">Warning</string>
    <string name="message_enable_usage_access">Easy Lock needs Usage Access Permission for this option. Click OK to go to Security settings, select \'Apps with usage access\' and enable Easy Lock there. After that please press back to return to Easy Lock.</string>
    <string name="heading_enable_usage_access">Please enable usage access</string>
    <string name="message_enable_usage_access_for_per_app_profiles">Please enable usage access to enable this option.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="support_smart_lock">Support Lollipop smart lock</string>
    <string name="heading_app_options">App options</string>
    <string name="heading_lock_options">Lock options</string>
    <string name="double_tap_timeout">Double tap timeout</string>
    <string name="test">Test</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="quick_intro">Quick Intro</string>
    <string name="rate_review">Feedback</string>
    <string name="share_app">Share</string>
    <string name="double_tap_to_sleep">Double tap to sleep</string>
    <string name="intro_text">Double tap your status bar / lock screen / notification shade to quickly lock your phone.\nReduce the power button usage.\n(This feature is not supported in Android 8 and above)</string>
    <string name="get_started">Get Started</string>
    <string name="like_this_app">Like this app?</string>
    <string name="title_activity_about">About</string>
    <string name="share_string">Easy Lock - Double tap to sleep.</string>
    <string name="send_to">Share EasyLock</string>
    <string name="donate_failed_message">Donate failed. Please try again.</string>
    <string name="prev_in_progress_try_later">Previous purchase is still being processed, please try after a few seconds.</string>
    <string name="enable_draw_over">Please enable \'Draw over other apps\' permission for EasyLock.</string>
    <string name="enable_draw_over_dialog">Easy Lock requires \'Draw over other apps\' permission. Please click OK, enable it, and click back to return to app.</string>
    <string name="permission_required">Permission required</string>
    <string name="avoid_lockscreen">Avoid lockscreen touches</string>
    <string name="warning_touch_anywhere">If you enable this, double tapping anywhere on the screen will turn the screen off. This can potentially interfere with other actions like double tap to zoom.\n\nIf you leave this option off, screen will be turned off only when you double tap status bar, nav bar etc. \n\nAre you sure you want to enable this?</string>
    <string name="touch_anywhere">Double tap anywhere to lock</string>
    <string name="error_open_webpage">Unable to open webpage</string>
    <string name="double_tap_homescreen">Double tap anywhere in homescreen to lock</string>
</resources>
